# kooplexQuery

./: .gitignore  LICENSE  README.md  pyproject.toml
kooplexQuery/: cli.py  db.py  db_chat.py  history.py  motor.py  prompt.py
kooplexQuery/mcp_client/: client.py
kooplexQuery/mcp_server/: db.py  db_cli.py  entry.py  main.py  pyproject.toml
sqlValidator/: sql_validator_app.py
src/: .gitignore  README  cli.py  config.env-template  db_chat.py  db_sewage.py  motor.py  prompt.py
src_archived/: app-errorhandling.py  app_utils.py  app_with_authorization.py  parallel_test.py
src_archived/app-wagent-ver6/: app-wagent-ver6.py  db_chat.py  db_sewage.py  example_qa_sewage.csv  graph.py  tool_library.py
src_archived/wagent_simple/: app.py  graph.py
