[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.18.0",
    "pandas>=2.3.3",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.11",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.44",
]
